--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     },
     "homepage": "https://github.com/MahyarCode/NatoursProject#readme",
     "dependencies": {
-        "express": "^4.22.1"
+        "express": "^4.22.1",
+        "morgan": "^1.10.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
