--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "natours",
     "version": "1.0.0",
     "description": "learning Node, Express, MongoDB",
-    "main": "app.js",
+    "main": "server.js",
     "type": "module",
     "scripts": {
         "start": "nodemon server.js"
@@ -18,10 +18,21 @@
     },
     "homepage": "https://github.com/MahyarCode/NatoursProject#readme",
     "dependencies": {
+        "dotenv": "^17.2.3",
         "express": "^4.22.1",
+        "mongoose": "^5.13.23",
         "morgan": "^1.10.1"
     },
     "devDependencies": {
-        "nodemon": "^3.1.11"
+        "eslint": "^8.57.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^5.5.4",
+        "eslint-plugin-react": "^7.37.5",
+        "nodemon": "^3.1.11",
+        "prettier": "^3.7.4"
     }
 }
