--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "nodemon server.js",
+        "start:prod": "SET NODE_ENV=production&& nodemon server.js",
         "debug": "ndb server.js"
     },
     "repository": {
