--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     },
     "homepage": "https://github.com/MahyarCode/NatoursProject#readme",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
         "dotenv": "^17.2.3",
         "express": "^4.22.1",
+        "jsonwebtoken": "^9.0.3",
         "mongoose": "^5.13.23",
         "morgan": "^1.10.1",
-        "slugify": "^1.6.6"
+        "slugify": "^1.6.6",
+        "validator": "^13.15.26"
     },
     "devDependencies": {
         "eslint": "^8.57.1",
