--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-        "start": "nodemon server.js",
+        "dev": "nodemon server.js",
         "start:prod": "SET NODE_ENV=production&& nodemon server.js",
         "debug": "ndb server.js"
     },
@@ -23,12 +23,18 @@
         "bcryptjs": "^3.0.3",
         "dotenv": "^17.2.3",
         "express": "^4.22.1",
+        "express-mongo-sanitize": "^2.2.0",
+        "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
+        "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^5.13.23",
         "morgan": "^1.10.1",
         "nodemailer": "^7.0.12",
+        "pug": "^3.0.3",
         "slugify": "^1.6.6",
-        "validator": "^13.15.26"
+        "validator": "^13.15.26",
+        "xss-clean": "^0.1.4"
     },
     "devDependencies": {
         "eslint": "^8.57.1",
