--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "scripts": {
         "dev": "nodemon server.js",
         "start:prod": "SET NODE_ENV=production&& nodemon server.js",
-        "debug": "ndb server.js"
+        "debug": "ndb server.js",
+        "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+        "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
     },
     "repository": {
         "type": "git",
@@ -20,7 +22,9 @@
     },
     "homepage": "https://github.com/MahyarCode/NatoursProject#readme",
     "dependencies": {
+        "axios": "^1.13.4",
         "bcryptjs": "^3.0.3",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.3",
         "express": "^4.22.1",
         "express-mongo-sanitize": "^2.2.0",
@@ -47,6 +51,7 @@
         "eslint-plugin-react": "^7.37.5",
         "ndb": "^1.1.5",
         "nodemon": "^3.1.11",
+        "parcel-bundler": "^1.12.5",
         "prettier": "^3.7.4"
     }
 }
