--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^5.13.23",
         "morgan": "^1.10.1",
+        "multer": "^2.0.2",
         "nodemailer": "^7.0.12",
         "pug": "^3.0.3",
+        "sharp": "^0.34.5",
         "slugify": "^1.6.6",
         "validator": "^13.15.26",
         "xss-clean": "^0.1.4"
