--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/MahyarCode/NatoursProject#readme",
     "dependencies": {
+        "@stripe/stripe-js": "^8.7.0",
         "axios": "^1.13.4",
         "bcryptjs": "^3.0.3",
         "cookie-parser": "^1.4.7",
@@ -31,6 +32,7 @@
         "express-rate-limit": "^8.2.1",
         "helmet": "^8.1.0",
         "hpp": "^0.2.3",
+        "html-to-text": "^9.0.5",
         "jsonwebtoken": "^9.0.3",
         "mongoose": "^5.13.23",
         "morgan": "^1.10.1",
@@ -39,6 +41,7 @@
         "pug": "^3.0.3",
         "sharp": "^0.34.5",
         "slugify": "^1.6.6",
+        "stripe": "^7.0.0",
         "validator": "^13.15.26",
         "xss-clean": "^0.1.4"
     },
