--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "start:prod": "SET NODE_ENV=production&& nodemon server.js",
         "debug": "ndb server.js",
         "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-        "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+        "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+        "start": "node server.js"
     },
     "repository": {
         "type": "git",
@@ -59,5 +60,8 @@
         "nodemon": "^3.1.11",
         "parcel-bundler": "^1.12.5",
         "prettier": "^3.7.4"
+    },
+    "engines": {
+        "node": ">=10.0.0"
     }
 }
